Use jdk 11, openjfx.